# data-cleaning-framework

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-checks.yaml  dependabot.yml
data_cleaning_framework/: __init__.py  clean_data.py  cleaner_utils.py  cli.py  constants.py  io.py  log.py  models.py  scaffold.py
data_cleaning_framework/templates/: cleaners.py.j2  pyproject.toml.j2  requirements.txt.j2  schema.py.j2  setup.py.j2
docs/: config-options.md
tests/: __init__.py
tests/data/: cleaners.py  geo-config-csv.yaml  geo-config.yaml  geo-input.csv  geo-input.geojson  geo-output-csv.geojson  geo-output.geojson  geo_schema.py  list-config.yaml  preprocess.py  preprocess_broken.py  schema_broken.py  simple-config-invalid-arg.yaml  simple-config.yaml  simple-input.csv  simple-input.xlsx  simple-output.csv  simple_cleaners.py  simple_schema.py  single-file-cleaner-config.yaml  single-file-input-2.csv  single-file-input.csv  single-file-output.csv  single_file_cleaners_2.py  single_file_schema.py
tests/integration/: test_end_to_end.py
tests/unit/: test_clean_data_io.py  test_clean_data_logging.py  test_clean_data_transformations.py  test_cleaner_utils.py  test_cli.py  test_io.py  test_models.py
tests/unit/data/: schema.py
